# multi-llm-deep-research

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md  project-overview.md
docs/daily-logs/: 2025-12-05.md  2025-12-06.md  template.md
docs/plans/: PLAN-01-llm-clients.md  PLAN-guide.md
src/mldr/: __init__.py
src/mldr/cli/: __init__.py  main.py
src/mldr/core/: __init__.py  config.py  llm_clients.py  pipeline.py  prompts.py
templates/: final-report.md  meta-review.md  research-request.md
tests/: test_config.py
